--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   padding: 0;
   color: #f0f0f0;
-  background: url('background5.jpg') no-repeat center center fixed;
+  background: url('komal_background.jpg') no-repeat center center fixed;
   background-size: cover;
 }
 
