--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   padding: 0;
   color: #f0f0f0;
-  background: url('images.jpg') no-repeat center center fixed;
+  background: url('mypic_new.jpg') no-repeat center center fixed;
   background-size: cover;
 }
 
@@ -69,8 +69,8 @@ nav a:hover {
 
 .profile-photo {
   border-radius: 50%;
-  width: 110px;
-  height: 130px;
+  width: 90px;
+  height: 110px;
   object-fit: cover;
   /* border: 4px solid #024451; */
   margin-bottom: 0;
